- Corrected styles to have consistent column spacing

--- a/src/components/BettingWidgets/BackingBettingWidget/BackingBettingWidget.less
+++ b/src/components/BettingWidgets/BackingBettingWidget/BackingBettingWidget.less
@@ -6,7 +6,7 @@
 .backingBettingWidget {
   background-color: @cinder;
   padding: 0px;
-  display: inline-block;
+  display: block;
   width:100%;
 
   &.disabled {
