--- a/src/components/BettingWidgets/BackingWidgetContainer/BackingWidgetContainer.less
+++ b/src/components/BettingWidgets/BackingWidgetContainer/BackingWidgetContainer.less
@@ -5,6 +5,8 @@
   background-color: @cinder;
   padding: 16px 16px 12px 16px;
   margin-top: 20px;
+  display: inline-block;
+  width: 100%;
 
   .title {
     color: @dark_tangerine;
